--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,18 +17,16 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v2
-      - name: Install Rust Toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: stable
-            override: true
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
-          command: check
-      - name: Check Rust Version
-        run: rustc -V
-      - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+          command: install wrangler
+      - uses: actions-rs/toolchain@v1
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
+          toolchain: stable
+          target: wasm32-unknown-unknown
+      - name: Publish Worker
+        run: |
+          wrangler publish
+        env:
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
